[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Terrain/button/ButtonSprites.png" type="Texture" id=1]
[ext_resource path="res://Src/Systems/Trigger/Button/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="Button" type="Area2D"]
collision_layer = 0
collision_mask = 3072
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
